--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -413,6 +413,97 @@
     "# Preview DataFrame\n",
     "tumor_vol_means.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Drug</th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.448593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.702684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.838617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.909731</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Drug  Timepoint  Tumor Volume (mm3)\n",
+       "0  Capomulin          0            0.000000\n",
+       "1  Capomulin          5            0.448593\n",
+       "2  Capomulin         10            0.702684\n",
+       "3  Capomulin         15            0.838617\n",
+       "4  Capomulin         20            0.909731"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate standard error of the means for \"Tumor Volume (mm3)\" grouped by \"Drug\" and \"Timepoint\" \n",
+    "tumor_vol_sem = all_data.groupby([\"Drug\", \"Timepoint\"])[\"Tumor Volume (mm3)\"].sem()\n",
+    "\n",
+    "# Convert to, and flatten, DataFrame\n",
+    "tumor_vol_sem = pd.DataFrame(tumor_vol_sem).reset_index()\n",
+    "\n",
+    "# Preview DataFrame\n",
+    "tumor_vol_sem.head()"
+   ]
   }
  ],
  "metadata": {
