Separate the values for each treatment
This allows each treatment to be plotted in a separate line.

--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -504,6 +504,38 @@
     "# Preview DataFrame\n",
     "tumor_vol_sem.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Drug                  Ketapril\n",
+       "Timepoint                   45\n",
+       "Tumor Volume (mm3)      70.663\n",
+       "Name: 39, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get \"Tumor Volume (mm3)\" values for each individual treatment to be plotted\n",
+    "capomulin = tumor_vol_means.loc[tumor_vol_means[\"Drug\"] == \"Capomulin\"][\"Tumor Volume (mm3)\"]\n",
+    "infubinol = tumor_vol_means.loc[tumor_vol_means[\"Drug\"] == \"Infubinol\"][\"Tumor Volume (mm3)\"]\n",
+    "ketapril = tumor_vol_means.loc[tumor_vol_means[\"Drug\"] == \"Ketapril\"][\"Tumor Volume (mm3)\"]\n",
+    "placebo = tumor_vol_means.loc[tumor_vol_means[\"Drug\"] == \"Placebo\"][\"Tumor Volume (mm3)\"]\n",
+    "\n",
+    "# Get the highest \"Tumor Volume (mm3)\" value out of the four treatments to be plotted\n",
+    "ymax = tumor_vol_means.loc[tumor_vol_means['Drug'].isin([\"Capomulin\", \"Infubinol\", \"Ketapril\", \"Placebo\"])]\n",
+    "# Get max y-axis value\n",
+    "ymax.loc[ymax[\"Tumor Volume (mm3)\"].idxmax()]"
+   ]
   }
  ],
  "metadata": {
