Wrangle the data for the survival rates plot and declare an x-axis
The data is properly formatted to construct the survival rates plot.
All of the scatter plots have the same x-axis values. Assign x_axis to 
the value used as the first plot's, "Tumor Response to Treatment", 
x-axis and use x_axis in all of the plots to condense the code.

--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -320,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tumor Response to Treatment"
+    "## Tumor Response to Treatment"
    ]
   },
   {
@@ -496,13 +496,13 @@
    ],
    "source": [
     "# Calculate standard error for \"Tumor Volume (mm3)\" grouped by \"Drug\" and \"Timepoint\" \n",
-    "tumor_vol_se = all_data.groupby([\"Drug\", \"Timepoint\"])[\"Tumor Volume (mm3)\"].sem()\n",
+    "tumor_vol_stderr = all_data.groupby([\"Drug\", \"Timepoint\"])[\"Tumor Volume (mm3)\"].sem()\n",
     "\n",
     "# Convert to, and flatten, DataFrame\n",
-    "tumor_vol_se = pd.DataFrame(tumor_vol_se).reset_index()\n",
+    "tumor_vol_stderr = pd.DataFrame(tumor_vol_stderr).reset_index()\n",
     "\n",
     "# Preview DataFrame\n",
-    "tumor_vol_se.head()"
+    "tumor_vol_stderr.head()"
    ]
   },
   {
@@ -729,7 +729,7 @@
    "source": [
     "# Pivot mean and stderr DataFrames\n",
     "tumor_mean_pivot = tumor_vol_mean.pivot(\"Timepoint\", \"Drug\", \"Tumor Volume (mm3)\")\n",
-    "tumor_stderr_pivot = tumor_vol_se.pivot(\"Timepoint\", \"Drug\", \"Tumor Volume (mm3)\")\n",
+    "tumor_stderr_pivot = tumor_vol_stderr.pivot(\"Timepoint\", \"Drug\", \"Tumor Volume (mm3)\")\n",
     "\n",
     "# Preview DataFrames\n",
     "display(tumor_mean_pivot.head(3))\n",
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -758,18 +758,18 @@
     "# Create figure and one subplot\n",
     "fig, ax = plt.subplots()\n",
     "\n",
-    "# Generate the x-axis values\n",
-    "x_axis = np.arange(0, 50, 5)\n",
+    "# All scatter plots have same x-axis values so use this in all scatter plots\n",
+    "x_axis = tumor_mean_pivot.index\n",
     "\n",
     "\n",
     "# Draw scatter plot\n",
-    "ax.errorbar(tumor_mean_pivot.index, tumor_mean_pivot[\"Capomulin\"], yerr=tumor_stderr_pivot[\"Capomulin\"], fmt=\"r--o\", linewidth= 0.5,\n",
+    "ax.errorbar(x_axis, tumor_mean_pivot[\"Capomulin\"], yerr=tumor_stderr_pivot[\"Capomulin\"], fmt=\"r--o\", linewidth= 0.5,\n",
     "           markersize=5)\n",
-    "ax.errorbar(tumor_mean_pivot.index, tumor_mean_pivot[\"Infubinol\"], yerr=tumor_stderr_pivot[\"Infubinol\"], fmt=\"b--^\", linewidth= 0.5,\n",
+    "ax.errorbar(x_axis, tumor_mean_pivot[\"Infubinol\"], yerr=tumor_stderr_pivot[\"Infubinol\"], fmt=\"b--^\", linewidth= 0.5,\n",
     "           markersize=5)\n",
-    "ax.errorbar(tumor_mean_pivot.index, tumor_mean_pivot[\"Ketapril\"], yerr=tumor_stderr_pivot[\"Ketapril\"], fmt=\"g--s\", linewidth= 0.5,\n",
+    "ax.errorbar(x_axis, tumor_mean_pivot[\"Ketapril\"], yerr=tumor_stderr_pivot[\"Ketapril\"], fmt=\"g--s\", linewidth= 0.5,\n",
     "           markersize=5)\n",
-    "ax.errorbar(tumor_mean_pivot.index, tumor_mean_pivot[\"Placebo\"], yerr=tumor_stderr_pivot[\"Placebo\"], fmt=\"k--D\", linewidth= 0.5,\n",
+    "ax.errorbar(x_axis, tumor_mean_pivot[\"Placebo\"], yerr=tumor_stderr_pivot[\"Placebo\"], fmt=\"k--D\", linewidth= 0.5,\n",
     "           markersize=5, markeredgewidth=0.1)\n",
     "\n",
     "# Set the plot's title\n",
@@ -794,7 +794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a scatter plot that shows how the number of metastatic (cancer spreading) sites changes over time for each treatment."
+    "## Metastatic Response to Treatment"
    ]
   },
   {
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1233,13 +1233,13 @@
     "fig, ax = plt.subplots()\n",
     "\n",
     "# Draw scatter plot\n",
-    "ax.errorbar(meta_mean_pivot.index, meta_mean_pivot[\"Capomulin\"], yerr=meta_stderr_pivot[\"Capomulin\"], fmt=\"r--o\",\n",
+    "ax.errorbar(x_axis, meta_mean_pivot[\"Capomulin\"], yerr=meta_stderr_pivot[\"Capomulin\"], fmt=\"r--o\",\n",
     "           linewidth=0.5, markersize=5)\n",
-    "ax.errorbar(meta_mean_pivot.index, meta_mean_pivot[\"Infubinol\"], yerr=meta_stderr_pivot[\"Capomulin\"], fmt=\"b--^\",\n",
+    "ax.errorbar(x_axis, meta_mean_pivot[\"Infubinol\"], yerr=meta_stderr_pivot[\"Capomulin\"], fmt=\"b--^\",\n",
     "           linewidth=0.5, markersize=5)\n",
-    "ax.errorbar(meta_mean_pivot.index, meta_mean_pivot[\"Ketapril\"], yerr=meta_stderr_pivot[\"Capomulin\"], fmt=\"g--s\",\n",
+    "ax.errorbar(x_axis, meta_mean_pivot[\"Ketapril\"], yerr=meta_stderr_pivot[\"Capomulin\"], fmt=\"g--s\",\n",
     "           linewidth=0.5, markersize=5)\n",
-    "ax.errorbar(meta_mean_pivot.index, meta_mean_pivot[\"Placebo\"], yerr=meta_stderr_pivot[\"Capomulin\"], fmt=\"k--D\",\n",
+    "ax.errorbar(x_axis, meta_mean_pivot[\"Placebo\"], yerr=meta_stderr_pivot[\"Capomulin\"], fmt=\"k--D\",\n",
     "           linewidth=0.5, markersize=5, markeredgewidth=0.1)\n",
     "\n",
     "# Set the plot's title\n",
@@ -1254,9 +1254,259 @@
     "plt.grid()\n",
     "\n",
     "# Save plot\n",
-    "plt.savefig(\"images/metastatic_spread.jpg\")\n",
+    "# plt.savefig(\"images/metastatic_spread.jpg\")\n",
     "# Display plot  \n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a scatter plot that shows the number of mice still alive through the course of treatment (Survival Rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Drug</th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Mouse Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>5</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>10</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>15</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>20</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Drug  Timepoint  Mouse Count\n",
+       "0  Capomulin          0           25\n",
+       "1  Capomulin          5           25\n",
+       "2  Capomulin         10           25\n",
+       "3  Capomulin         15           24\n",
+       "4  Capomulin         20           23"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate number of mice grouped by \"Drug\" and \"Timepoint\" \n",
+    "mouse_count = all_data.groupby([\"Drug\", \"Timepoint\"])[\"Mouse ID\"].count()\n",
+    "\n",
+    "# Convert to, and flatten, DataFrame\n",
+    "mouse_count_df = pd.DataFrame({\"Mouse Count\": mouse_count}).reset_index()\n",
+    "\n",
+    "# Preview DataFrame\n",
+    "mouse_count_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Drug</th>\n",
+       "      <th>Capomulin</th>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <th>Infubinol</th>\n",
+       "      <th>Ketapril</th>\n",
+       "      <th>Naftisol</th>\n",
+       "      <th>Placebo</th>\n",
+       "      <th>Propriva</th>\n",
+       "      <th>Ramicane</th>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <th>Zoniferol</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>26</td>\n",
+       "      <td>25</td>\n",
+       "      <td>26</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>25</td>\n",
+       "      <td>21</td>\n",
+       "      <td>25</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>24</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>25</td>\n",
+       "      <td>20</td>\n",
+       "      <td>21</td>\n",
+       "      <td>22</td>\n",
+       "      <td>21</td>\n",
+       "      <td>24</td>\n",
+       "      <td>23</td>\n",
+       "      <td>24</td>\n",
+       "      <td>23</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>24</td>\n",
+       "      <td>19</td>\n",
+       "      <td>21</td>\n",
+       "      <td>19</td>\n",
+       "      <td>21</td>\n",
+       "      <td>20</td>\n",
+       "      <td>17</td>\n",
+       "      <td>24</td>\n",
+       "      <td>23</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>23</td>\n",
+       "      <td>18</td>\n",
+       "      <td>20</td>\n",
+       "      <td>19</td>\n",
+       "      <td>20</td>\n",
+       "      <td>19</td>\n",
+       "      <td>17</td>\n",
+       "      <td>23</td>\n",
+       "      <td>21</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Drug       Capomulin  Ceftamin  Infubinol  Ketapril  Naftisol  Placebo  \\\n",
+       "Timepoint                                                                \n",
+       "0                 25        25         25        25        25       25   \n",
+       "5                 25        21         25        23        23       24   \n",
+       "10                25        20         21        22        21       24   \n",
+       "15                24        19         21        19        21       20   \n",
+       "20                23        18         20        19        20       19   \n",
+       "\n",
+       "Drug       Propriva  Ramicane  Stelasyn  Zoniferol  \n",
+       "Timepoint                                           \n",
+       "0                26        25        26         25  \n",
+       "5                25        25        25         24  \n",
+       "10               23        24        23         22  \n",
+       "15               17        24        23         21  \n",
+       "20               17        23        21         17  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Pivot mouse count DataFrame\n",
+    "mouse_count_pivot = mouse_count_df.pivot(\"Timepoint\", \"Drug\", \"Mouse Count\")\n",
+    "\n",
+    "# Preview DataFrame\n",
+    "mouse_count_pivot.head()"
    ]
   }
  ],
