--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pymaceuticals Inc.\n",
+    "---\n",
+    "\n",
+    "### Analysis\n",
+    "* Capomulin had the best results out of the treatments analyzed.\n",
+    "* Capomulin was the only treatment that reduced tumor volume. Throughout the life of the trial Capomulin reduced tumor volume by 19% while the other treatments saw an increase in tumor volume by 40-50%.\n",
+    "* The survival rate of the mice on the Capomulin treatment was more than twice as effective as the rest of the treatments analyzed. Over 90% of the mice on the Capomulin treatment survived through the end of the trial, but only 35-45% of the mice on the other treatments managed to survive until the end."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -757,12 +770,14 @@
     "ax.set_ylabel(\"Tumor Volume (mm3)\")\n",
     "ax.set_xlabel(\"Time (Days)\")\n",
     "\n",
-    "# Set legend and show grid lines\n",
+    "# Set legend\n",
     "plt.legend(loc=\"best\", fontsize=\"small\", fancybox=True)\n",
+    "# Show grid lines\n",
     "plt.grid()\n",
     "\n",
-    "# Save and display scatter plot\n",
-    "# plt.savefig(\"images/tumor_treatments.jpg\")\n",
+    "# Save scatter plot\n",
+    "plt.savefig(\"images/tumor_treatments.jpg\")\n",
+    "# Display scatter plot\n",
     "plt.show()"
    ]
   },
@@ -1225,12 +1240,14 @@
     "ax.set_ylabel(\"Met. Sites\")\n",
     "ax.set_xlabel(\"Treatment Duration (Days)\")\n",
     "\n",
-    "# Set legend and show grid lines\n",
+    "# Set legend\n",
     "plt.legend(loc=\"best\", fontsize=\"small\", fancybox=True)\n",
+    "# Show grid lines\n",
     "plt.grid()\n",
     "\n",
-    "# Save and display scatter plot\n",
-    "# plt.savefig(\"images/metastatic_spread.jpg\") \n",
+    "# Save scatter plot\n",
+    "plt.savefig(\"images/metastatic_spread.jpg\") \n",
+    "# Display scatter plot\n",
     "plt.show()"
    ]
   },
@@ -1520,12 +1537,14 @@
     "ax.set_xlabel(\"Time (Days)\")\n",
     "ax.set_ylabel(\"Survival Rate %\")\n",
     "\n",
-    "# Set legend and show grid lines\n",
+    "# Set legend\n",
     "plt.legend(loc=\"best\", fontsize=\"small\", fancybox=True)\n",
+    "# Show grid lines\n",
     "plt.grid()\n",
     "\n",
-    "# Save and display scatter plot\n",
+    "# Save scatter plot\n",
     "plt.savefig(\"images/survival_during_treatment.jpg\")\n",
+    "# Display scatter plot\n",
     "plt.show()"
    ]
   },
@@ -1595,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1663,6 +1682,8 @@
     "# Show grid lines\n",
     "plt.grid()\n",
     "\n",
+    "# Save bar graph\n",
+    "plt.savefig(\"images/summary_bar_graph.jpg\")\n",
     "# Display bar graph\n",
     "plt.show()"
    ]
